Interface for following users now allows following and unfollowing users

--- a/mobile/ionic.project
+++ b/mobile/ionic.project
@@ -5,6 +5,10 @@
         {
             "path": "/tatami",
             "proxyUrl": "http://localhost:8080/tatami"
+        },
+        {
+            "path": "/assets",
+            "proxyUrl": "http://localhost:8080/assets"
         }
     ]
 }
