--- a/mobile/package.json
+++ b/mobile/package.json
@@ -12,6 +12,20 @@
   "devDependencies": {
     "bower": "^1.3.3",
     "gulp-util": "^2.2.14",
+    "karma": "^0.13.19",
+    "karma-jasmine": "^0.3.6",
+    "jasmine-core": "^2.3.4",
+    "karma-chrome-launcher": "^0.2.0",
+    "karma-cli": "^0.1.1",
+    "karma-coverage": "^0.5.2",
+    "karma-firefox-launcher": "^0.1.6",
+    "karma-ie-launcher": "^0.2.0",
+    "karma-jenkins-reporter": "0.0.2",
+    "karma-jshint": "^0.1.0",
+    "karma-junit-reporter": "^0.3.6",
+    "karma-phantomjs-launcher": "^0.2.1",
+    "karma-safari-launcher": "^0.1.1",
+    "phantomjs": "^1.9.18",
     "shelljs": "^0.3.0"
   },
   "cordovaPlugins": [
