--- a/mobile/ionic.project
+++ b/mobile/ionic.project
@@ -1,14 +1,23 @@
 {
-    "name": "mobile",
-    "app_id": "",
-    "proxies": [
-        {
-            "path": "/tatami",
-            "proxyUrl": "http://localhost:8080/tatami"
-        },
-        {
-            "path": "/assets",
-            "proxyUrl": "http://localhost:8080/assets"
-        }
-    ]
+  "name": "mobile",
+  "app_id": "",
+  "proxies": [
+    {
+      "path": "/tatami",
+      "proxyUrl": "http://localhost:8080/tatami"
+    },
+    {
+      "path": "/assets",
+      "proxyUrl": "http://localhost:8080/assets"
+    }
+  ],
+  "gulpStartupTasks": [
+    "sass",
+    "watch",
+    "dev"
+  ],
+  "watchPatterns": [
+    "www/**/*",
+    "!www/lib/**/*"
+  ]
 }
