Added google client secret and id to the properties file

--- a/services/src/main/resources/META-INF/tatami/tatami.properties
+++ b/services/src/main/resources/META-INF/tatami/tatami.properties
@@ -26,6 +26,9 @@ tatami.ldapauth.searchfilter=${tatami.ldapauth.searchfilter}
 #Files extension for which we create thumbnails, comma separated
 tatami.attachment.thumbnail.extensions=.gif,.jpg,.jpeg,.png
 
+tatami.google.clientId=${tatami.google.clientId}
+tatami.google.clientSecret=${tatami.google.clientSecret}
+
 #E-mail configuration
 smtp.host=${tatami.smtp.host}
 smtp.port=${tatami.smtp.port}
