--- a/bower.json
+++ b/bower.json
@@ -13,6 +13,7 @@
     "angular-i18n": "1.4.8",
     "angular-local-storage": "0.2.3",
     "angular-loading-bar": "0.8.0",
+    "angular-moment": "0.10.0",
     "angular-resource": "1.4.8",
     "angular-sanitize": "1.4.8",
     "angular-translate": "2.8.1",
