Allowing 'bower install' to run as part of maven build. Adding bower_components to .gitignore.

--- a/.gitignore
+++ b/.gitignore
@@ -126,3 +126,8 @@ Desktop.ini
 # Maven Wrapper
 ######################
 !.mvn/wrapper/maven-wrapper.jar
+
+######################
+# Bower Components
+######################
+/src/main/webapp/bower_components/**
