--- a/bower.json
+++ b/bower.json
@@ -28,7 +28,7 @@
     "ngInfiniteScroll": "1.2.1",
     "swagger-ui": "2.1.3",
     "ngToast": "ngtoast#~1.5.6",
-    "angular-moment": "^0.10.3"
+    "angular-moment": "0.10.3"
   },
   "devDependencies": {
     "angular-mocks": "1.4.8",
