--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,7 @@
         <awaitility.version>1.4.0</awaitility.version>
         <commons-io.version>2.4</commons-io.version>
         <commons-lang.version>2.6</commons-lang.version>
+        <exec-maven-plugin.version>1.2.1</exec-maven-plugin.version>
         <gatling.version>2.1.7</gatling.version>
         <gatling-maven-plugin.version>2.1.7</gatling-maven-plugin.version>
         <datastax-driver.version>2.1.7.1</datastax-driver.version>
@@ -605,7 +606,7 @@
                     <plugin>
                         <groupId>org.codehaus.mojo</groupId>
                         <artifactId>exec-maven-plugin</artifactId>
-                        <version>1.2.1</version>
+                        <version>${exec-maven-plugin.version}</version>
                         <executions>
                             <execution>
                                 <id>exec-bower-install</id>
