--- a/src/main/resources/config/application-dev.yml
+++ b/src/main/resources/config/application-dev.yml
@@ -55,4 +55,6 @@ jhipster:
             host: localhost
             port: 2003
             prefix: TatamiJHipster
-    url: localhost
+
+tatami:
+        url: http://localhost:8080
